structure des sections

--- a/index.html
+++ b/index.html
@@ -55,6 +55,121 @@
         </div>
     </section>
 
+    <section id="food-section">
+        <header class="island">
+                <h1>L'île de la Réunion <br>
+                Un Paradie sur terre</h1>
+        </header>
+
+        <div class="dot">
+
+            <div>
+                <span id="whale"></span>
+                <span id="landscape"></span>
+                <span id="sea"></span>
+            </div>
+
+            <div>
+                <span id="birds"></span>
+                <span id="food"></span>
+                <span id="culture"></span>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="culture-section">
+        <header class="island">
+                <h1>L'île de la Réunion <br>
+                Un Paradie sur terre</h1>
+        </header>
+
+        <div class="dot">
+
+            <div>
+                <span id="whale"></span>
+                <span id="landscape"></span>
+                <span id="sea"></span>
+            </div>
+
+            <div>
+                <span id="birds"></span>
+                <span id="food"></span>
+                <span id="culture"></span>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="landscape-section">
+        <header class="island">
+                <h1>L'île de la Réunion <br>
+                Un Paradie sur terre</h1>
+        </header>
+
+        <div class="dot">
+
+            <div>
+                <span id="whale"></span>
+                <span id="landscape"></span>
+                <span id="sea"></span>
+            </div>
+
+            <div>
+                <span id="birds"></span>
+                <span id="food"></span>
+                <span id="culture"></span>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="sea-section">
+        <header class="island">
+                <h1>L'île de la Réunion <br>
+                Un Paradie sur terre</h1>
+        </header>
+
+        <div class="dot">
+
+            <div>
+                <span id="whale"></span>
+                <span id="landscape"></span>
+                <span id="sea"></span>
+            </div>
+
+            <div>
+                <span id="birds"></span>
+                <span id="food"></span>
+                <span id="culture"></span>
+            </div>
+
+        </div>
+    </section>
+
+    <section id="birds-section">
+        <header class="island">
+                <h1>L'île de la Réunion <br>
+                Un Paradie sur terre</h1>
+        </header>
+
+        <div class="dot">
+
+            <div>
+                <span id="whale"></span>
+                <span id="landscape"></span>
+                <span id="sea"></span>
+            </div>
+
+            <div>
+                <span id="birds"></span>
+                <span id="food"></span>
+                <span id="culture"></span>
+            </div>
+
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
