--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 
             <div>
                 <span id="whale"><a href="javascript:switchWhale();">x</a></span>
-                <span id="landscape"></span>
-                <span id="sea"></span>
+                <span id="landscape"><a href="javascript:switchLandscape();">x</a></span>
+                <span id="sea"><a href="javascript:switchSea();">x</a></span>
             </div>
 
             <div>
-                <span id="birds"></span>
+                <span id="birds"><a href="javascript:switchBird();">x</a></span>
                 <span id="food"></span>
                 <span id="culture"></span>
             </div>
@@ -43,8 +43,8 @@
 
             <div>
                 <span id="whale"><a href="javascript:switchMain1();">x</a></span>
-                <span id="landscape"></span>
-                <span id="sea"></span>
+                <span id="landscape"><a href="javascript:switchWhaleLandscape();">x</a></span>
+                <span id="sea"><a href="javascript:switchWhaleSea();">x</a></span>
             </div>
             <div class="content">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto ipsum molestias laboriosam eum quo. Perspiciatis, iusto at? Delectus cumque vitae modi neque qui alias soluta excepturi illo doloremque ullam. Nihil?</p>
@@ -69,9 +69,9 @@
         <div class="dot">
 
             <div>
-                <span id="whale"></span>
-                <span id="landscape"></span>
-                <span id="sea"></span>
+                <span id="whale"><a href="javascript:switchLandscapeWhale();">x</a></span>
+                <span id="landscape"><a href="javascript:switchMain2();">x</a></span>
+                <span id="sea"><a href="javascript:switchLandscapeSea();">x</a></span>
             </div>
 
             <div>
@@ -92,9 +92,9 @@
         <div class="dot">
 
             <div>
-                <span id="whale"></span>
-                <span id="landscape"></span>
-                <span id="sea"></span>
+                <span id="whale"><a href="javascript:switchSeaWhale();">x</a></span>
+                <span id="landscape"><a href="javascript:switchSeaLandscape();">x</a></span>
+                <span id="sea"><a href="javascript:switchMain1();">x</a></span>
             </div>
 
             <div>
@@ -115,8 +115,8 @@
         <div class="dot">
 
             <div>
-                <span id="whale"></span>
-                <span id="landscape"></span>
+                <span id="whale"><a href="javascript:switchBirdWhale();">x</a></span>
+                <span id="landscape"><a href="javascript:switchLandscape();">x</a></span>
                 <span id="sea"></span>
             </div>
 
