--- a/animals.html
+++ b/animals.html
@@ -14,7 +14,7 @@
         <h1>Une énorme <b>Biodiversité</b></h1>
     </header>
 
-    <div class="containerall">
+    <div class="containeranimals">
         <div class="container3">
             <img src="style/images/baleine.jpg" alt="" />
             <p class="title">Baleine à bosses</p>
