--- a/food.html
+++ b/food.html
@@ -8,6 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="return">
+        <a  href="index.html"><img class="home" src='/style/images/accueil.png'></a>
+        <h1>Des recettes <b>emblematique</b></h1>
+    </header>
 </body>
 </html>
